# fftw-cmake

./: .travis.yml  CMakeLists.txt  README.rst  appveyor.yml  build.sh  config.h.in
extern_test/: CMakeLists.txt  t_fftw3.cpp  t_fftw3f.cpp
